--- a/style.css
+++ b/style.css
@@ -13,14 +13,15 @@
 
 /* -------------sidebar------------ */
 .sidebar{
-    max-width: 280px;
-    min-width: 180px;
+    /* max-width: 380px; */
+    min-width: 280px;
     height: 100vh;
      position: sticky;
     top: 0;
     left: 0;
     z-index: 1000;
     overflow: hidden;
+        transition: transform 0.3s ease;
     
 }
 
@@ -49,12 +50,24 @@
     display: none;
 }
 .profile:hover{
-    border: 1px solid #e9ecef;
+    /* border: 1px solid #e9ecef; */
     border-radius: 10px;
 }
 .profile:hover .arrow{
     display: block;
 }
+
+.side.active{
+    background-color: #2DD4BF !important; 
+    border-radius: 10px;
+    
+   
+}
+
+.side.active  .side-list {
+    /* color: #ffffff !important; */
+}
+
 /* ----------------navbar----------------- */
 nav {
     top: 0;
@@ -150,3 +163,52 @@ nav {
     }  
 
    
+
+   
+/* @media (max-width: 768px) {
+  .sidebar {
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    min-width: 70px;
+    z-index: 1000;
+    background-color: #f8f9fa; 
+  }
+
+  .sidebar.show {
+    transform: translateX(0);
+  }
+}  */
+
+   
+    @media (max-width: 992px) {
+       .sidebar{
+            min-width: 70px;
+        }
+          .hide-side{
+        display: none !important;
+      }
+
+      .arrow {
+        display: block;
+
+    }
+    }
+    @media (max-width: 425px) {
+       .sidebar{
+            min-width: 70px;
+        }
+          .hide-side{
+        display: none !important;
+      }
+
+      .arrow {
+        display: block;
+
+    }
+    }
+   
+
