--- a/style.css
+++ b/style.css
@@ -183,7 +183,44 @@ nav {
   }
 }  */
 
-   
+   /* --------------------------------------profile------------------ */
+
+.profile-section {
+  background: url("images/cover.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+  color: #333;
+  border-radius: 10px;
+}
+
+.profile-img {
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 3px solid #fff;
+}
+
+.camera-icon {
+  bottom: 0;
+  right: 5px;
+  background-color: #007bff;
+  color: white;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.target{
+  opacity: 0;
+}
+
+
     @media (max-width: 992px) {
        .sidebar{
             min-width: 70px;
