--- a/style.css
+++ b/style.css
@@ -17,12 +17,10 @@
      position: sticky;
     top: 0;
     left: 0;
-    z-index: 1000;
+    z-index: 998;
     overflow: hidden;
-      transition: transform 0.3s ease;
-    
+      transition: transform 0.3s ease;  
 }
-
 .shop{
     border-radius: 0.8rem;
 }
@@ -57,13 +55,12 @@
     background-color: #2DD4BF !important; 
     border-radius: 10px;
 }
-
 /* ----------------navbar----------------- */
 nav {
     top: 0;
     width: calc(100% - 280px);
     right: 0;
-    z-index: 999;
+    z-index: 500 !important;
     background-color: #ffffff;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05); 
    
@@ -152,7 +149,8 @@ nav {
         background-color: #64748b; 
     }  
 
-   
+
+    
 
    
 /* @media (max-width: 768px) {
@@ -207,19 +205,204 @@ nav {
 }
 
 
-    @media (max-width: 992px) {
+/* ----------------------enrollment----------------- */
+.search-container input {
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  min-width: 200px;
+}
+
+.search-container .icon {
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #7e7e7e;
+  font-size: 14px;
+}
+
+.filter-btn,
+.export-btn {
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 14px;
+  max-width: 120px;
+}
+
+.export-btn {
+  background-color: #2d8cff;
+  color: white;
+  border: none;
+}
+
+.sort-dropdown,
+.date-picker {
+  border-radius: 8px;
+  border: 1px solid #e0e0e0;
+  font-size: 14px;
+  outline: none;
+  min-width: 200px;
+}
+.input,
+.fltr-icon,
+.sort-dropdown,
+.date{
+  width: 100%;
+}
+
+.enrollment-table td{
+  font-size: 14px !important;
+  padding-bottom: 20px !important;
+  padding-top: 20px !important;
+}
+.pay-btn{
+  background-color: #475569;
+}
+.width-pay{
+  min-width: 120px !important;
+}
+.bg-confirmed{
+  background-color: #2DD4BF;
+}
+/* ---------------------students------------------ */
+.new-stu-btn{
+  border: 1px solid #2DD4BF;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 14px;
+  min-width: 170px;
+  color: #2DD4BF;
+}
+.male{
+  width: 40px;
+  height: 40px;
+}
+.div-1{
+  min-width: 180px;
+}
+.div-2{
+  min-width: 145px;
+}
+.div-in-1{
+  width: 100%;;
+}
+
+.enroll{
+  color:#2DD4BF;
+}
+.effect:hover{
+  border: 1px solid #2DD4BF;
+  border-radius: 8px;
+}
+/* ----------courses----------- */
+.dropdown
+ {
+  border-radius: 8px;
+  border: 1px solid #e0e0e0;
+  font-size: 14px;
+  outline: none;
+  min-width: 170px;
+}
+
+.sort-dropdown{
+  width: 100%;
+}
+.all{
+  border: 1px solid #f8f9fa;
+  border-radius: 8px;
+}
+.hvr:hover{
+  border: 1px solid #2DD4BF;
+  border-radius: 8px;
+}
+.card-bg{
+  background-color: #EC4899;
+}
+.border-enroll{
+  border: 1px solid #2DD4BF;
+  border-radius: 8px;
+}
+
+/* ---------------responsive sidebar------------ */
+ /* .side-btn{
+      display: none;
+     }
+     left-nav{
+      display: none;
+     } */
+     /* Hide the sidebar */
+/* .sidebar-hidden {
+  display: none !important;
+}
+ #sidebar {
+  transition: transform 0.3s ease;
+} */
+
+/* ----------------media-------------- */
+    @media (max-width: 992px ) {
        .sidebar{
             min-width: 70px;
         }
           .hide-side{
         display: none !important;
       }
-
       .arrow {
         display: block;
+    }
+    }
+   
 
+
+  
+
+
+
+/* @media (max-width: 768px) {
+  #sidebar.sidebar-hidden {
+    transform: translateX(-100%);
+  }
+
+  #sidebar {
+    min-width: 280px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    z-index: 999;
+    background-color: #f8f9fa;
+  }
+
+  #sidebarToggle {
+    display: block;
+    position: fixed;
+    top: 20px;
+    left: 10px;
+    z-index: 1000;
+  }
+} */
+
+
+    /* @media (max-width: 768px) {
+    .sidebar{
+    min-width: 280px;
     }
+    .hide-side{
+        display: block !important;
+      }
+    .side-btn{
+      display: block;
+      top: 45px;
+      right: -40px;
+      z-index: 990;
     }
+    .left-nav{
+      display: block;
+      padding-left: 40px;
+    }
+    nav {
+    width: 100%;
+  }
+  } */
     @media (max-width: 425px) {
        .sidebar{
             min-width: 70px;
